Attempting to fix horizontal scroll of mobile window

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -108,7 +108,7 @@
 		}	
 
 		.scrollTopVenus {
-			left: 84.8%;
+			left: 84%;
 			padding: 0;
 			height: auto;
 			width: 15.5%;
